update weather functionality

--- a/assets/style.css
+++ b/assets/style.css
@@ -40,6 +40,8 @@ form {
     border: var(--periwinkle);
     display: flex;
     justify-content: center;
+    gap: 30px;
+    margin-left: 220px;
 }
 
 #forecast-cards {
