--- a/assets/style.css
+++ b/assets/style.css
@@ -66,3 +66,16 @@ form {
     margin-left: 300px;
 
 }
+
+@media screen and (max-width: 992px) {
+  
+}
+
+@media screen and (max-width: 768px) {
+ 
+}
+
+@media screen and (max-width: 576px) {
+ 
+
+}
